# seclab-taskflows

./: .gitignore  CODEOWNERS  FUZZING.md  LOCAL_SETUP.md  README.md  VULN_REPORTS.md  pyproject.toml
.devcontainer/: devcontainer.json  env-copilot  env-default  post-attach.sh  post-create.sh
.github/workflows/: ci.yml  dev-version.yml  ghcr-cleanup.yml  publish-to-pypi.yaml  publish-to-testpypi.yaml
benchmark/: README.md  improvements.md  projects.yaml
scripts/: build_container_images.sh  create_repo.sh  generate_vuln_reports.py  run_audit_local.sh  run_container_shell_demo.sh  run_in_docker.sh  run_seclab_agent.sh  setup_local.sh
scripts/audit/: run_audit.sh  run_audit_in_docker.sh
scripts/fuzzing/: dashboard.py  install_afl.sh  run_fuzzing.sh
src/: run_seclab_agent.sh
src/seclab_taskflows/: __about__.py
src/seclab_taskflows/configs/: model_config.yaml  model_config_codeql_python.yaml  model_config_lowercost.yaml
src/seclab_taskflows/containers/sast/: Dockerfile
src/seclab_taskflows/dictionaries/: binary_tlv_mutator.c  json.dict  json_mutator.c  png.dict  regex.dict  regex_mutator.c  xml.dict  xml_mutator.c
src/seclab_taskflows/mcp_servers/: __init__.py  alert_results_models.py  codeql_utils.py  fuzz_context.py  fuzz_context_models.py  fuzz_runner.py  gh_actions.py  gh_code_scanning.py  gh_file_viewer.py  ghsa.py  local_file_viewer.py  local_gh_resources.py  local_shell.py  repo_context.py  repo_context_models.py  report_alert_state.py  security_advisories.py  utils.py
src/seclab_taskflows/mcp_servers/codeql_python/: README.md  __init__.py  codeql_sqlite_models.py  mcp_server.py
src/seclab_taskflows/mcp_servers/codeql_python/queries/mcp-python/: remote_sources.ql
src/seclab_taskflows/personalities/: action_expert.yaml  auditor.yaml  fuzzing_engineer.yaml  web_application_security_expert.yaml
src/seclab_taskflows/prompts/audit/: audit_issue.yaml  audit_library_issue.yaml  classify_application_component.yaml  classify_library_component.yaml  entry_point_application.yaml  entry_point_library.yaml  known_security_advisories.yaml  record_library_dependency.yaml  user_action_application.yaml  user_action_library.yaml
src/seclab_taskflows/prompts/fuzzing/: coverage_feedback.yaml  triage_crash.yaml  vuln_report.yaml
src/seclab_taskflows/prompts/triage_taskflows/actions_common/: check_dismiss_reason.yaml  dismiss_decision.yaml
src/seclab_taskflows/taskflows/alert_triage_examples/: README.md
src/seclab_taskflows/taskflows/alert_triage_examples/triage_common/: check_notes.yaml  fetch_code_scanning_alerts.yaml  reachability_analysis.yaml  validate_user_input.yaml
src/seclab_taskflows/taskflows/alert_triage_examples/triage_taskflows/: create_issues_actions.yaml  create_issues_js_ts.yaml  review_actions_injection_issues.yaml  review_untrusted_checkout_issues.yaml  triage_actions_code_injection.yaml  triage_js_ts_client_side_xss.yaml  triage_js_ts_path_injection.yaml  triage_untrusted_checkout_critical.yaml
src/seclab_taskflows/taskflows/alert_triage_examples/triage_taskflows/actions_common/: audit_workflow_users.yaml  check_report.yaml  cleanup_results.yaml  collect_dismiss_reasons.yaml  create_report.yaml  review_report.yaml  track_workflow_users.yaml  trigger_analysis.yaml
src/seclab_taskflows/taskflows/audit/: acl_check.yaml  audit_issue.yaml  audit_issue_local.yaml  audit_issue_local_iter.yaml  audit_library_issue_local.yaml  audit_sanitizers.yaml  classify_application.yaml  classify_application_local.yaml  classify_library_application_local.yaml  cross_repo_audit_issue_local_iter.yaml  fetch_audit_issue.yaml  fetch_security_advisories.yaml  fetch_source_code.yaml  filter_severity.yaml  gather_mobile_entry_point_info.yaml  gather_mobile_entry_point_info_local.yaml  gather_security_entry_point_info.yaml  gather_web_entry_point_info.yaml  gather_web_entry_point_info_local.yaml  ghsa_variant_analysis_demo.yaml  identify_applications.yaml  identify_applications_local.yaml  identify_library_components.yaml  inspect_issue.yaml  js_ts_endpoint_access_checks.yaml  remote_sources_local.yaml
src/seclab_taskflows/taskflows/container_shell/: README.md  demo_sast.yaml
src/seclab_taskflows/taskflows/fuzzing/: README.md  analyze_build_system.yaml  analyze_call_graph.yaml  build_harnesses.yaml  confirm_fixed_crashes.yaml  fuzz_iteration.yaml  identify_fuzz_targets.yaml  qualify_harnesses.yaml  triage_crashes.yaml  write_initial_harnesses.yaml  write_report.yaml  write_vuln_reports.yaml
src/seclab_taskflows/toolboxes/: codeql_python.yaml  container_shell_sast.yaml  fuzz_context.yaml  fuzz_runner.yaml  gh_actions.yaml  gh_code_scanning.yaml  gh_file_viewer.yaml  ghsa.yaml  local_file_viewer.yaml  local_gh_resources.yaml  local_shell.yaml  repo_context.yaml  report_alert_state.yaml  security_advisories.yaml
tests/: test_00.py  test_container_shell.py  test_dashboard.py  test_fuzz_context.py  test_fuzz_runner.py  test_gh_file_viewer.py
