[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seclab-taskflows"
dynamic = ["version"]
description = 'Example taskflows to use with the the GitHub Security Lab Taskflow Agent Framework (https://github.com/GitHubSecurityLab/seclab-taskflow-agent)'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "GitHub Security Lab", email = "securitylab@github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "seclab-taskflow-agent",
]

[project.urls]
Source = "https://github.com/GitHubSecurityLab/seclab-taskflows"
Issues = "https://github.com/GitHubSecurityLab/seclab-taskflows/issues"

[tool.hatch.version]
path = "src/seclab_taskflows/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/seclab_taskflows tests}"

[tool.coverage.run]
source_pkgs = ["seclab_taskflows", "tests"]
branch = true
parallel = true
omit = [
  "src/seclab_taskflows/__about__.py",
]

[tool.coverage.paths]
seclab_taskflows = ["src/seclab_taskflows", "*/seclab-taskflows/src/seclab_taskflows"]
tests = ["tests", "*/seclab-taskflows/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint]
ignore = [
  "A001",      # Variable shadowing a Python builtin
  "A002",      # Argument shadowing a Python builtin
  "ARG001",    # Unused function argument
  "B007",      # Loop control variable not used within loop body
  "B008",      # Do not perform function call in argument defaults
  "BLE001",    # Blind except Exception
  "C403",      # Unnecessary list comprehension (rewrite as a set comprehension)
  "C405",      # Unnecessary list literal (rewrite as a set literal)
  "EM102",     # Exception must not use an f-string literal
  "FA100",     # Add `from __future__ import annotations`
  "FA102",     # Missing `from __future__ import annotations`
  "FBT001",    # Boolean positional arg in function definition
  "FBT002",    # Boolean default value in function definition
  "G004",      # Logging statement uses f-string
  "LOG015",    # Use `%s` formatting in logging functions
  "N802",      # Function name should be lowercase
  "PERF102",   # When using `dict.items()`, unnecessary `list()` call
  "PERF401",   # Use a list comprehension to create a transformed list
  "PIE810",    # Call `tuple` once with a single argument
  "PLC0206",   # Extracting value from dictionary without calling `.items()`
  "PLR2004",   # Magic value used in comparison
  "PLW0602",   # Using global for variable but no assignment is done
  "PLW1508",   # Invalid type for environment variable default
  "RET504",    # Unnecessary assignment before `return` statement
  "RUF003",    # Comment contains ambiguous unicode character
  "RUF013",    # PEP 484 prohibits implicit `Optional`
  "RUF015",    # Prefer `next(iter(x))` over single element slice
  "S607",      # Starting a process with a partial executable path
  "SIM101",    # Use a ternary expression instead of if-else-block with return statements
  "SIM102",    # Use a single if-statement instead of nested if-statements
  "SIM117",    # Use a single `with` statement with multiple contexts
  "T201",      # `print` found
  "TID252",    # Prefer absolute imports over relative imports from parent modules
  "TRY003",    # Avoid specifying long messages outside the exception class
  "TRY300",    # Consider moving this statement to an `else` block
]
